<?xml version="1.0"?>
<package format="2">
  <name>pbtm</name>
  <version>1.0.0</version>
  <description>PX4 B-spline Trajectory Manager</description>
  <maintainer email="matthewoots@gmail.com">matthew</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
  </export>
</package>
